--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lodash": "^4.17.15",
     "lodash.mergewith": "^4.6.2",
     "lodash.template": "^4.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^9.0.0",
     "open-color": "^1.6.3",
     "react": "^16.8.6",
     "react-alert": "^5.5.0",
@@ -48,5 +48,9 @@
   ],
   "devDependencies": {
     "gh-pages": "^2.0.1"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/hughtamo/Frontend.git",
+  "author": "sjy2335 <106982330+sjy2335@users.noreply.github.com>",
+  "license": "MIT"
 }
