--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "http-proxy-middleware": "^2.0.6"
   },
   "main": "index.js",
   "repository": "https://github.com/hughtamo/Frontend.git",
