워드클라우드~

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://ChoJongHoon.github.io/react-messenger-client",
   "dependencies": {
+    "@fontsource/noto-sans-kr": "^5.0.11",
     "@material-ui/core": "^3.9.3",
     "apollo-boost": "^0.3.1",
     "apollo-link-ws": "^1.0.17",
@@ -28,6 +29,7 @@
     "react-google-login": "^5.0.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-wordcloud": "^1.2.7",
     "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^5.2.2"
   },
