--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_OPENAI_API_KEY="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"
+REACT_APP_MINWON_API_KEY="wVnVEpU1xUDRBNYVRe25BaJQ%2FS3G55tcxVJKVdLYs11fzXh1AtCnbmDOHLMHhSPYxYBDtyEDlhALEA%2FpQiTFNw%3D%3D";
